--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: GPL-2.0
+# SPDX-License-Identifier: GPL-2.0-only
 # SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ### Intellji
 *.iml
