--- a/REUSE.toml
+++ b/REUSE.toml
@@ -9,4 +9,4 @@ SPDX-PackageDownloadLocation = "https://splitcells.net"
 path = "README.md"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "Contributors To The `net.splitcells.*` Projects"
-SPDX-License-Identifier = "EPL-2.0 OR GPL-2.0-or-later"
+SPDX-License-Identifier = "GPL-2.0-only"
